update lifegurad workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs: # 定义需要执行的工作
           # password: ${{ secrets.DOCKER_PASSWORD }}
 
           push: true # 推送镜像到Docker Hub
-          tags: duzyu/lifegurad:latest # 设置镜像的标签
+          tags: sxjytkj/lifegurad:latest # 设置镜像的标签
 
 
 
