--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "lifegurad",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.40.0",
-    "@wagmi/core": "^2.14.4",
-    "@web3modal/wagmi": "^4.2.3",
+    "@reown/appkit": "1.7.20",
+    "@reown/appkit-adapter-wagmi": "1.7.20",
+    "@tanstack/vue-query": "5.75.4",
+    "@wagmi/core": "^2.20.3",
+    "@wagmi/vue": "0.1.20",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "docx-preview": "^0.3.6",
@@ -20,7 +23,9 @@
     "moment": "^2.30.1",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
+    "viem": "^2.36.0",
     "vue": "^3.2.13",
+    "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1"
   },
@@ -29,12 +34,18 @@
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.2"
   },
   "eslintConfig": {
     "root": true,
@@ -43,10 +54,11 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
