--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@wagmi/vue": "0.1.20",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "docx-preview": "^0.3.6",
     "element-plus": "^2.11.1",
     "ethers": "^6.13.1",
     "express": "^5.1.0",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
     "viem": "^2.36.0",
