--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "@reown/appkit": "1.7.20",
     "@reown/appkit-adapter-wagmi": "1.7.20",
     "@tanstack/vue-query": "5.75.4",
     "@wagmi/core": "^2.20.3",
     "@wagmi/vue": "0.1.20",
+    "bcryptjs": "^3.0.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
@@ -24,6 +26,7 @@
     "moment": "^2.30.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "pinia": "^3.0.3",
     "uuid": "^11.1.0",
     "viem": "^2.36.0",
     "vue": "^3.2.13",
