--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wagmi/core": "^2.20.3",
     "@wagmi/vue": "0.1.20",
     "bcryptjs": "^3.0.2",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
