--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@reown/appkit": "1.7.20",
     "@reown/appkit-adapter-wagmi": "1.7.20",
     "@tanstack/vue-query": "5.75.4",
-    "@wagmi/core": "^2.20.3",
     "@wagmi/vue": "0.1.20",
     "bcryptjs": "^3.0.2",
     "connect-history-api-fallback": "^2.0.0",
@@ -22,14 +21,14 @@
     "dayjs": "^1.11.18",
     "docx-preview": "^0.3.6",
     "element-plus": "^2.11.1",
-    "ethers": "^6.13.1",
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
-    "viem": "^2.36.0",
+    "viem": "^2.31.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^11.1.11",
