--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
-    "docx-preview": "^0.3.6",
     "dotenv": "^17.2.2",
     "element-plus": "^2.11.1",
     "express": "^5.1.0",
@@ -33,25 +32,29 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^11.1.11",
-    "vue-router": "^4.5.1"
+    "vue-pdf-embed": "^1.1.6",
+    "vue-router": "^4.5.1",
+    "vue3-pdfjs": "^0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-class-static-block": "^7.28.3",
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "file-loader": "^6.2.0",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "url-loader": "^4.1.1"
   },
   "eslintConfig": {
     "root": true,
