--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "element-plus": "^2.11.1",
+    "ethers": "^6.15.0",
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
